Added List Items

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
   <h1>Git Tutorial</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione est, adipisci odio maxime accusamus sed amet in temporibus molestias iusto quasi! Minima nesciunt autem, debitis magnam at eaque iure?</p>
+<ul>
+  <li>List Item 1</li>
+  <li>List Item 2</li>
+  <li>List Item 3</li>
+  <li>List Item 4</li>
+</ul>
+
 </body>
 </html>
