--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Git Tutorial</title>
 </head>
 <body>
-  <h1>Git Tutorial</h1>
+  <h1>Awesome Git Tutorial</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione est, adipisci odio maxime accusamus sed amet in temporibus molestias iusto quasi! Minima nesciunt autem, debitis magnam at eaque iure?</p>
 <ul>
   <li>List Item 1</li>
